--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stefan-markovic",
+  "name": "fayssal-bidari",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
+    "@studio-freight/locomotive-scroll": "^0.0.8",
+    "@studio-freight/react-lenis": "^0.0.47",
+    "gsap": "^3.12.5",
+    "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.13"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
